--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "shiny==1.2.1",
     "tokenizers==0.21.0",
-    "chromadb==0.6.3",
     "faiss-cpu>=1.9.0.post1",
     "huggingface-hub>=0.27.1",
     "instructorembedding>=1.0.1",
@@ -24,4 +23,6 @@ dependencies = [
     "tabulate>=0.9.0",
     "tiktoken>=0.8.0",
     "unstructured==0.16.15",
+    "langchain-chroma==0.2.1",
+    "faicons==0.2.2",
 ]
