--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
 shiny==1.2.1
 tokenizers==0.21.0
-chromadb==0.6.3
 faiss-cpu>=1.9.0.post1
 huggingface-hub>=0.27.1
 instructorembedding>=1.0.1
-langchain>=0.3.15
 langchain-community==0.3.15
 langchain-core==0.3.31
 langchain-ollama==0.2.2
@@ -17,3 +15,7 @@ streamlit>=1.41.1
 tabulate>=0.9.0
 tiktoken>=0.8.0
 unstructured==0.16.15
+langchain-chroma==0.2.1
+faicons==0.2.2
+docx2txt==0.8
+langchain>=0.3.15
